adding local host to github action

--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -21,6 +21,7 @@ jobs:
       postgres:
         image: postgres
         env:
+          POSTGRES_HOST: localhost
           POSTGRES_DB: eregs
           POSTGRES_USER: eregs
           POSTGRES_PASSWORD: sgere
