setting django server url

--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -133,6 +133,7 @@ jobs:
       postgres:
         image: postgres
         env:
+          STATIC_URL: http://localhost:8888/
           POSTGRES_HOST: localhost
           POSTGRES_DB: eregs
           POSTGRES_USER: eregs
