set up environment variables for github action

--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -129,6 +129,13 @@ jobs:
   test-python:
     needs: [ deploy-django ]
     runs-on: ubuntu-20.04
+    env:
+      STATIC_URL: http://localhost:8888/
+      POSTGRES_HOST: localhost
+      POSTGRES_DB: eregs
+      POSTGRES_USER: eregs
+      POSTGRES_PASSWORD: sgere
+      DB_PORT: 5432
     services:
       postgres:
         image: postgres
