set up test_settings.py for test db to use

--- a/solution/backend/pyproject.toml
+++ b/solution/backend/pyproject.toml
@@ -1,2 +1,2 @@
 [tool.pytest.ini_options]
-DJANGO_SETTINGS_MODULE = "cmcs_regulations.settings"
+DJANGO_SETTINGS_MODULE = "cmcs_regulations.test_settings"
