--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -115,6 +115,38 @@ jobs:
           serverless deploy --stage ${{ matrix.environment }} --config ./serverless-fr.yml
           AWS_CLIENT_TIMEOUT=360000 serverless invoke --function fr_parser --stage ${{ matrix.environment }} --config ./serverless-fr.yml
           popd
+      -name: run pytest
+        env:
+          STATIC_URL: http://localhost:8888/
+          DB_HOST: localhost
+          DB_NAME: eregs
+          DB_USER: eregs
+          DB_PASSWORD: sgere
+          DB_PORT: 5432
+        services:
+          postgres:
+            image: postgres
+            env:
+              POSTGRES_HOST: localhost
+              POSTGRES_DB: eregs
+              POSTGRES_USER: eregs
+              POSTGRES_PASSWORD: sgere
+            ports:
+              - 5432:5432
+              # needed because the postgres container does not provide a healthcheck
+            options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+        uses: actions/checkout@v3
+          with:
+            submodules: true
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.8'
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r ./solution/static-assets/requirements.txt
+        working-directory: ./solution/backend
+        run: |
+          pytest -vv
       - name: end-to-end tests
         uses: cypress-io/github-action@v5
         with:
@@ -122,3 +154,4 @@ jobs:
           config: baseUrl=${{ steps.deploy-regulations-site-server.outputs.url }}
         env:
           CYPRESS_DEPLOYING: true
+          
