--- a/solution/Makefile
+++ b/solution/Makefile
@@ -87,8 +87,11 @@ prototype.clean: ui/prototype
 
 .PHONY: lint
 lint:
+	flake8
+ruff:
 	docker-compose exec regulations ruff check .;
-
+ruff-fix:
+	docker-compose exec regulations ruff --fix .
 local: ## Start a local environment with parts 400 and 433 loaded.
 local: regulations local.docker data.local
 	@echo Local environment started. Visit http://localhost:8000
