--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,12 +45,11 @@ jobs:
           node-version: 18.14
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.8"
+          python-version: "3.9"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r ./solution/static-assets/requirements.txt
-
       - name: build static assets
         env:
           STATIC_ROOT: ../static-assets/regulations
@@ -63,6 +62,9 @@ jobs:
           python manage.py collectstatic --noinput
           cd ..
           popd
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
       - name: Configure AWS credentials for GitHub Actions
         uses: aws-actions/configure-aws-credentials@v2
         with:
