cleaned up issue on make file

--- a/solution/Makefile
+++ b/solution/Makefile
@@ -91,7 +91,7 @@ lint:
 ruff:
 	docker-compose exec regulations ruff check .;
 ruff-fix:
-	docker-compose exec regulations ruff --fix .ruff:
+	docker-compose exec regulations ruff --fix .
 
 local: ## Start a local environment with parts 400 and 433 loaded.
 local: regulations local.docker data.local
