update test to use proper config, modified make

--- a/solution/Makefile
+++ b/solution/Makefile
@@ -152,9 +152,9 @@ local.collectstatic: ## Create static assets.
 local.opensearch: ## Run a local opensearch environment
 	docker-compose -f docker-compose.opensearch.yml up -d
 
-test: ## run the cypress e2e suite
-	docker-compose -f docker-compose.yml -f docker-compose.e2e.yml up e2e
-test.local: ## run cypress tests locally without docker
+test.cypress: ## run the cypress e2e suite
+	DJANGO_SETTINGS_MODULE="cmcs_regulations.settings.test_settings" docker-compose -f docker-compose.yml  -f docker-compose.e2e.yml up e2e
+test.cypress.local: ## run cypress tests locally without docker
 	cd ui/e2e; \
 		npm install; \
 		npm run cypress:run;
@@ -172,8 +172,8 @@ python.unittest:
 	docker-compose exec regulations python manage.py test 
 
 ##uncomment the -vvv if there are errors running pytest. 
-python.pytest:
-	docker-compose exec regulations pytest -vvv 
+test.pytest:
+	DJANGO_SETTINGS_MODULE="cmcs_regulations.settings.test_settings" docker-compose -f docker-compose.yml exec regulations pytest -vvv 
 
 python.shell:
 	docker-compose exec regulations python manage.py shell
