--- a/solution/docker-compose.yml
+++ b/solution/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       SIDEBAR_CONTENT_DIR: /var/lib/eregs/cmcs/content
       DEBUG: "True"
       SUPPLEMENTAL_CONTENT_PATH: /app/src/serverless/guidance
+      DJANGO_SETTINGS_MODULE: ${DJANGO_SETTINGS_MODULE:-cmcs_regulations.settings.local}
     ports:
       - 8000:8000
     links:
