--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -22,6 +22,7 @@ provider:
     HTTP_AUTH_PASSWORD: ${ssm:/eregulations/http/password}
     DJANGO_ADMIN_USERNAME: ${ssm:/eregulations/http/user}
     DJANGO_ADMIN_PASSWORD: ${ssm:/eregulations/http/password}
+    DJANGO_SETTINGS_MODULE: ${ssm:/eregulations/django_settings_module}
     ALLOWED_HOST: '.amazonaws.com'
     STATIC_URL: ${self:custom.settings.static_url}
     CUSTOM_URL: ${ssm:/eregulations/custom_url, ''}
