--- a/solution/backend/serverless.yml
+++ b/solution/backend/serverless.yml
@@ -24,6 +24,7 @@ provider:
     HTTP_AUTH_PASSWORD: ${ssm:/eregulations/http/password}
     DJANGO_ADMIN_USERNAME: ${ssm:/eregulations/http/user}
     DJANGO_ADMIN_PASSWORD: ${ssm:/eregulations/http/password}
+    DJANGO_SETTINGS_MODULE: ${ssm:/eregulations/django_settings_module}
     ALLOWED_HOST: '.amazonaws.com'
     STATIC_URL: ${self:custom.settings.static_url}
     BASE_URL: ${ssm:/eregulations/base_url}
