Add new fixtures and update readme

--- a/solution/Makefile
+++ b/solution/Makefile
@@ -191,13 +191,20 @@ python.migrate:
 	docker-compose exec regulations python manage.py migrate
 
 objects = resources.abstractcategory resources.category resources.subcategory resources.abstractlocation resources.section resources.subpart resources.federalregisterdocumentgroup resources.resourcesconfiguration resources.abstractresource resources.federalregisterdocument resources.supplementalcontent
+reg_objects = regulations.siteconfiguration regulations.statutelinkconfiguration regulations.statutelinkconverter
+auth_objects = auth.group auth.permission
 
 local.seed:
 	$(foreach object, $(objects), docker-compose exec regulations python manage.py loaddata $(object).json;) \
-	docker-compose exec regulations python manage.py loaddata search.synonym.json 
-	docker-compose exec regulations python manage.py loaddata regulations.statutelinkconverter.json
+	$(foreach object, $(reg_objects), docker-compose exec regulations python manage.py loaddata $(object).json;) \
+	$(foreach object, $(auth_objects), docker-compose exec regulations python manage.py loaddata $(object).json;) \
+
+	docker-compose exec regulations python manage.py loaddata search.synonym.json
+
 
 local.dump:
 	$(foreach object, $(objects), docker-compose exec regulations python manage.py dumpdata $(object) --indent 4 > ./backend/resources/fixtures/$(object).json;) \
-	docker-compose exec regulations python manage.py dumpdata search.synonym --indent 4 > ./backend/regcore/search/fixtures/search.synonym.json
-	docker-compose exec regulations python manage.py dumpdata regulations.statutelinkconverter --indent 4 > ./backend/regulations/fixtures/regulations.statutelinkconverter.json
+	$(foreach object, $(reg_objects), docker-compose exec regulations python manage.py dumpdata $(object) --indent 4 > ./backend/regulations/fixtures/$(object).json;) \
+	$(foreach object, $(auth_objects), docker-compose exec regulations python manage.py dumpdata $(object) --indent 4 > ./backend/regulations/fixtures/$(object).json;) \
+	docker-compose exec regulations python manage.py dumpdata contenttypes.contenttype --indent 4 > ./backend/regcore/search/fixtures/contenttypes.contenttype.json
+	docker-compose exec regulations python manage.py dumpdata search.synonym --indent 4 > ./backend/regcore/search/fixtures/search.synonym.json 
