moved content type and admin fixtures to cmcs

--- a/solution/Makefile
+++ b/solution/Makefile
@@ -190,16 +190,16 @@ python.makemigrations:
 python.migrate:
 	docker-compose exec regulations python manage.py migrate
 
+# Do not change the order of these objects.  In some cases it matters
 objects = resources.abstractcategory resources.category resources.subcategory resources.abstractlocation resources.section resources.subpart resources.federalregisterdocumentgroup resources.resourcesconfiguration resources.abstractresource resources.federalregisterdocument resources.supplementalcontent
 reg_objects = regulations.siteconfiguration regulations.statutelinkconfiguration regulations.statutelinkconverter
-auth_objects = auth.group auth.permission
+auth_objects = contenttypes.contenttype auth.permission auth.group
 
 local.seed:
 	$(foreach object, $(objects), docker-compose exec regulations python manage.py loaddata $(object).json;) \
 	$(foreach object, $(reg_objects), docker-compose exec regulations python manage.py loaddata $(object).json;) \
-	$(foreach object, $(auth_objects), docker-compose exec regulations python manage.py loaddata $(object).json;) \
+	$(foreach object, $(auth_objects), docker-compose exec regulations python manage.py loaddata cmcs_regulations/fixtures/$(object).json;) \
 	docker-compose exec regulations python manage.py loaddata search.synonym.json
-	docker-compose exec regulations python manage.py loaddata contenttypes.contenttype.json
 
 
 local.dump:
