--- a/solution/Makefile
+++ b/solution/Makefile
@@ -191,12 +191,12 @@ python.migrate:
 	docker-compose exec regulations python manage.py migrate
 
 # Do not change the order of these objects.  In some cases it matters
-objects = resources.abstractcategory resources.category resources.subcategory resources.abstractlocation resources.section resources.subpart resources.federalregisterdocumentgroup resources.resourcesconfiguration resources.abstractresource resources.federalregisterdocument resources.supplementalcontent
+resource_objects = resources.abstractcategory resources.category resources.subcategory resources.abstractlocation resources.section resources.subpart resources.federalregisterdocumentgroup resources.resourcesconfiguration resources.abstractresource resources.federalregisterdocument resources.supplementalcontent
 reg_objects = regulations.siteconfiguration regulations.statutelinkconfiguration regulations.statutelinkconverter
 auth_objects = contenttypes.contenttype auth.permission auth.group
 
 local.seed:
-	$(foreach object, $(objects), docker-compose exec regulations python manage.py loaddata $(object).json;) \
+	$(foreach object, $(resource_objects), docker-compose exec regulations python manage.py loaddata $(object).json;) \
 	$(foreach object, $(reg_objects), docker-compose exec regulations python manage.py loaddata $(object).json;) \
 	$(foreach object, $(auth_objects), docker-compose exec regulations python manage.py loaddata cmcs_regulations/fixtures/$(object).json;) \
 	docker-compose exec regulations python manage.py loaddata search.synonym.json
