--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,6 +88,14 @@ jobs:
           serverless invoke --function create_su --stage ${{ matrix.environment }}
           echo "url=$(cat output.log | grep -m1 'ANY -' | cut -c 9-)" >> $GITHUB_OUTPUT
           popd
+      - name: condtional output for prod
+        id: condtional-output-for-prod
+        if: ${{ matrix.environment }} == "prod"
+        run: echo "prod is here"
+      - name: conditoinal output for other environments
+        id: condtional-output-for-not-prod
+        if: ${{ matrix.environment }} != "prod"
+        run: echo "this is not prod"
       # vite needs the .env file in order to know the URL of the api.
       - name: Make envfile
         uses: SpicyPizza/create-envfile@v1.3
