--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,11 +90,11 @@ jobs:
           popd
       - name: condtional output for prod
         id: condtional-output-for-prod
-        if: ${{ matrix.environment }} == "prod"
+        if: ${{ matrix.environment  == 'prod' }}
         run: echo "prod is here"
-      - name: conditoinal output for other environments
+      - name: conditional output for other environments
         id: condtional-output-for-not-prod
-        if: ${{ matrix.environment }} != "prod"
+        if: ${{ matrix.environment  != 'prod' }}
         run: echo "this is not prod"
       # vite needs the .env file in order to know the URL of the api.
       - name: Make envfile
