--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,14 +88,16 @@ jobs:
           serverless invoke --function create_su --stage ${{ matrix.environment }}
           echo "url=$(cat output.log | grep -m1 'ANY -' | cut -c 9-)" >> $GITHUB_OUTPUT
           popd
-      - name: condtional output for prod
-        id: condtional-output-for-prod
-        if: ${{ matrix.environment  == 'prod' }}
-        run: echo "prod is here"
-      - name: conditional output for other environments
+      - name: Populate content for ${{ matrix.environment }}
         id: condtional-output-for-not-prod
         if: ${{ matrix.environment  != 'prod' }}
-        run: echo "this is not prod"
+        run: |
+          pushd solution/backend
+          npm install serverless -g
+          npm install
+          serverless invoke --function populate_content --stage ${{ matrix.environment }}
+          echo "url=$(cat output.log | grep -m1 'ANY -' | cut -c 9-)" >> $GITHUB_OUTPUT
+          popd
       # vite needs the .env file in order to know the URL of the api.
       - name: Make envfile
         uses: SpicyPizza/create-envfile@v1.3
