--- a/.github/workflows/git-secrets.yaml
+++ b/.github/workflows/git-secrets.yaml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Run gitlakes docker	    
+    - name: Run gitlakes dockers
       uses: docker://zricethezav/gitleaks
       with:
         args: detect --source /github/workspace/ --no-git --verbose
