--- a/solution/static-assets/requirements.txt
+++ b/solution/static-assets/requirements.txt
@@ -1,6 +1,7 @@
 Werkzeug==0.15.5
 zappa-django-utils==0.4.1
 boto3
+django-debug-toolbar
 django>=3.1,<4
 requests
 djangorestframework
@@ -16,7 +17,7 @@ httpx
 ruff
 pytest
 pytest-django==4.5
-pre-commit
+
 defusedxml
 mozilla-django-oidc
 wagtail
