--- a/solution/backend/serverless.yml
+++ b/solution/backend/serverless.yml
@@ -35,6 +35,7 @@ provider:
     SEARCHGOV_SITE_NAME: ${ssm:/eregulations/searchgov/site_name}
     AWS_ACCESS_KEY_ID: ${ssm:/eregulations/file_manager/AWS_ACCESS_KEY_ID}
     AWS_SECRET_ACCESS_KEY: ${ssm:/eregulations/file_manager/AWS_SECRET_ACCESS_KEY}
+    AWS_BUCKET_NAME: ${ssm:/eregulations/file_manager/bucket_name}
 
   tracing:
     apiGateway: true
