--- a/solution/backend/serverless.yml
+++ b/solution/backend/serverless.yml
@@ -36,6 +36,7 @@ provider:
     AWS_ACCESS_KEY_ID: ${ssm:/eregulations/file_manager/AWS_ACCESS_KEY_ID}
     AWS_SECRET_ACCESS_KEY: ${ssm:/eregulations/file_manager/AWS_SECRET_ACCESS_KEY}
     AWS_BUCKET_NAME: ${ssm:/eregulations/file_manager/bucket_name}
+    AWS_S3_SIGNATURE_VERSION: "s3v4"
 
   tracing:
     apiGateway: true
