--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ solution/static-assets/regulations/*
 !solution/static-assets/regulations/fonts/
 !solution/static-assets/regulations/images/
 !solution/static-assets/regulations/pdfs/
+!solution/static-assets/regulations/wagtail*
 solution/ui/regulations/dist
 solution/Dockerfile
 solution/ui/regulations/coverage/
