--- a/solution/backend/serverless_functions/dev_functions.yml
+++ b/solution/backend/serverless_functions/dev_functions.yml
@@ -3,26 +3,30 @@ reg_site:
     STATIC_URL: ${self:custom.settings.static_url}
     WORKING_DIR: /var/task
   handler: wsgi_handler.handler
-  layers:
-    - ${cf:cmcs-eregs-static-assets-${self:custom.stage}.PythonRequirementsLambdaLayerQualifiedArn}
+  fileSystemConfig:
+    localMountPath: /mnt/example
+    arn: ${ssm:/account_vars/efs/arn}
   events:
     - http: ANY /
     - http: ANY {proxy+}
   timeout: 10
 reg_core_migrate:
   handler: migrate.handler
-  layers:
-    - ${cf:cmcs-eregs-static-assets-${self:custom.stage}.PythonRequirementsLambdaLayerQualifiedArn}
+  fileSystemConfig:
+    localMountPath: /mnt/example
+    arn: ${ssm:/account_vars/efs/arn}
   timeout: 300
 create_su:
   handler: createsu.handler
-  layers:
-    - ${cf:cmcs-eregs-static-assets-${self:custom.stage}.PythonRequirementsLambdaLayerQualifiedArn}
+  fileSystemConfig:
+    localMountPath: /mnt/example
+    arn: ${ssm:/account_vars/efs/arn}
   timeout: 300
 populate_content:
   environment:
     SUPPLEMENTAL_CONTENT_PATH: /var/task/guidance
   handler: populate_content.handler
-  layers:
-    - ${cf:cmcs-eregs-static-assets-${self:custom.stage}.PythonRequirementsLambdaLayerQualifiedArn}
+  fileSystemConfig:
+    localMountPath: /mnt/example
+    arn: ${ssm:/account_vars/efs/arn}
   timeout: 300
