--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -14,9 +14,9 @@ custom:
       localDir: ./regulations
       deleteRemoved: false
   pythonRequirements:
+    slim: true
     layer:
       name: python-django
-      slim: true
       description: "Layer which contains django requirements"
       compatibleRuntimes:
         - python3.9
@@ -45,7 +45,7 @@ resources:
       Properties:
         BucketName: eregs-${self:custom.stage}-site-assets
         BucketEncryption:
-          ServerSideEncryptionConfiguration:
+          ServerSideEncryptionConfiguration:fp
             - ServerSideEncryptionByDefault:
                 SSEAlgorithm: AES256
         PublicAccessBlockConfiguration:
