--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -15,6 +15,7 @@ custom:
       deleteRemoved: false
   pythonRequirements:
     slim: true
+    zip: true
     layer:
       name: python-django
       description: "Layer which contains django requirements"
