--- a/solution/static-assets/requirements.txt
+++ b/solution/static-assets/requirements.txt
@@ -7,7 +7,6 @@ requests
 djangorestframework
 psycopg2-binary
 django-solo
-django-opensearch-dsl
 python-dateutil~=2.8.2
 django-cors-headers
 drf-spectacular==0.24.2
@@ -21,3 +20,6 @@ pytest-django==4.5
 pre-commit
 defusedxml
 mozilla-django-oidc
+wagtail
+django-taggit
+django-storages
