--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -14,6 +14,7 @@ custom:
       localDir: ./regulations
       deleteRemoved: false
   pythonRequirements:
+    dockerizePip: non-linux
     noDeploy:
       - docutils
       - jmespath
