--- a/solution/static-assets/serverless.yml
+++ b/solution/static-assets/serverless.yml
@@ -21,6 +21,7 @@ custom:
       - jmespath
       - python-dateutil
       - setuptools
+      - six
       - precommit
       - pytest
       - zappa-django-utils
