fix: clean/reset deploy ymls

--- a/.github/workflows/deploy-experimental.yml
+++ b/.github/workflows/deploy-experimental.yml
@@ -119,7 +119,7 @@ jobs:
           pushd solution/backend
           npm install serverless -g
           npm install
-          RUN_ATTEMPT=${{ github.run_attempt }} serverless deploy --config ./serverless-experimental.yml --stage dev${PR} | tee output.log
+          serverless deploy --config ./serverless-experimental.yml --stage dev${PR} | tee output.log
           serverless invoke --config ./serverless-experimental.yml --function create_database --stage dev${PR}
           serverless invoke --config ./serverless-experimental.yml --function reg_core_migrate --stage dev${PR}
           serverless invoke --config ./serverless-experimental.yml --function create_su --stage dev${PR}
