--- a/solution/backend/serverless-experimental.yml
+++ b/solution/backend/serverless-experimental.yml
@@ -145,12 +145,8 @@ resources:
                    Action:
                      - "s3:PutObject"
                    Resource: 
-                     Fn::Join:
-                       - ""
-                       - - "arn:aws:s3:::"
-                         - "Ref" : "ServerlessDeploymentBucket"
-                         - "Ref" : MyS3Bucket
-                         - "/*" 
+                     - !Sub arn:aws:s3:::${ServerlessDeploymentBucket}
+                     - "Ref" : MyS3Bucket
 plugins:
   - serverless-wsgi
   - serverless-cloudfront-invalidate
